i m update image path

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -619,7 +619,7 @@
     <div class="container">
       <div class="infotainment">
         <div class="infotainment-img">
-          <img src="/public/src/view.jpeg" alt="Infotainment Display">
+          <img src="/hero.jpg" alt="Infotainment Display">
         </div>
         <div class="infotainment-text">
           <h2>Immersive Infotainment Experience</h2>
@@ -657,7 +657,7 @@
       <div class="fleet-cards">
         <div class="fleet-card">
           <div class="fleet-card-img">
-            <img src="/public/src/hero.jpg" alt="SkyLink A1">
+            <img src="/hero.jpg" alt="SkyLink A1">
           </div>
           <div class="fleet-card-content">
             <h3>SkyLink A1</h3>
@@ -703,7 +703,7 @@
         </div>
         <div class="fleet-card">
           <div class="fleet-card-img">
-            <img src="/public/src/hero.jpg" alt="SkyLink C6">
+            <img src="/hero.jpg" alt="SkyLink C6">
           </div>
           <div class="fleet-card-content">
             <h3>SkyLink C6</h3>
