--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,7 +127,7 @@
     .hero {
       height: 100vh;
       background: linear-gradient(rgba(10, 15, 27, 0.7), rgba(10, 15, 27, 0.9)), 
-                  url('/public/src/hero.jpg') center/cover no-repeat;
+                  url('/public/hero.jpg') center/cover no-repeat;
       position: relative;
       display: flex;
       align-items: center;
@@ -555,7 +555,7 @@
   <header id="header">
     <div class="container">
       <div class="header-content">
-        <a href="#" class="logo">
+        <a href="/public/hero.jpg" class="logo">
           <span class="material-icons logo-icon">flight</span>
           SkyLink eVTOL
         </a>
@@ -619,7 +619,7 @@
     <div class="container">
       <div class="infotainment">
         <div class="infotainment-img">
-          <img src="/hero.jpg" alt="Infotainment Display">
+          <img src="/public/hero.jpg" alt="Infotainment Display">
         </div>
         <div class="infotainment-text">
           <h2>Immersive Infotainment Experience</h2>
@@ -657,7 +657,7 @@
       <div class="fleet-cards">
         <div class="fleet-card">
           <div class="fleet-card-img">
-            <img src="/hero.jpg" alt="SkyLink A1">
+            <img src="/public/hero.jpg" alt="SkyLink A1">
           </div>
           <div class="fleet-card-content">
             <h3>SkyLink A1</h3>
@@ -680,7 +680,7 @@
         </div>
         <div class="fleet-card">
           <div class="fleet-card-img">
-            <img src="/public/src/hero.jpg" alt="SkyLink B4">
+            <img src="/public/hero.jpg" alt="SkyLink B4">
           </div>
           <div class="fleet-card-content">
             <h3>SkyLink B4</h3>
@@ -703,7 +703,7 @@
         </div>
         <div class="fleet-card">
           <div class="fleet-card-img">
-            <img src="/hero.jpg" alt="SkyLink C6">
+            <img src="/public/hero.jpg" alt="SkyLink C6">
           </div>
           <div class="fleet-card-content">
             <h3>SkyLink C6</h3>
