--- a/frontend/index.html
+++ b/frontend/index.html
@@ -847,7 +847,7 @@
           <a href="#infotainment">Infotainment</a>
           <a href="#fleet">Fleet</a>
           <a href="#contact">Contact</a>
-          <a href="./display.html">Login</a>
+          <a href="./demo.html">Demo</a>
           <a href="./auth.html">Login</a>
         </nav>
       </div>
